<resources>
    <string name="pc_login_out">退出登录</string>
    <string name="pc_delete">删除</string>
    <string name="pc_attendance">考勤</string>

    <string name="pc_input_account">请输入账号</string>
    <string name="pc_input_password">请输入员工初次密码</string>
    <string name="pc_confirm">确认</string>
    <string name="pc_cancel">取消</string>
    <string name="pc_header">头像</string>
    <string name="pc_nickname">昵称</string>
    <string name="pc_age">年龄</string>
    <string name="pc_address">我的地址</string>
    <string name="pc_approval">审批</string>

    <string name="pc_input_nickname">请输入昵称</string>
    <string name="pc_input_age">请输入年龄</string>
    <string name="pc_input_address">请输入地址</string>
</resources>