<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >




    <EditText
        android:id="@+id/et_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/pc_input_account"
        android:theme="@style/Pc_Et_Bg_Color"
        android:textColor="@color/colorPrimary"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/pc_input_password"
        android:theme="@style/Pc_Et_Bg_Color"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_account" />

   <Spinner
       android:layout_marginTop="38dp"
       app:layout_constraintTop_toBottomOf="@id/et_password"
       android:id="@+id/spinner"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       tools:ignore="MissingConstraints" />



    <TextView
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:textSize="16sp"
        android:textColor="@color/colorWrite"
        android:background="@drawable/pc_button_bg_blue"
        android:layout_marginBottom="64dp"
        android:text="@string/pc_cancel"
        android:gravity="center"
        app:layout_constraintRight_toLeftOf="@id/tv_confirm"
        app:layout_constraintHorizontal_weight="1"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        />

    <TextView
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:id="@+id/tv_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/tv_cancel"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:textSize="16sp"
        android:layout_marginStart="20dp"
        android:textColor="@color/colorWrite"
        android:background="@drawable/pc_button_bg_blue"
        android:layout_marginBottom="64dp"
        android:text="@string/pc_confirm"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        />


</androidx.constraintlayout.widget.ConstraintLayout>