<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorLine"
    android:layout_height="match_parent"
    tools:context=".ui.activity.UserInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWrite"
        android:id="@+id/layout_basic"
        tools:ignore="MissingConstraints">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:paddingStart="16dp"
            android:id="@+id/layout_header"
            android:background="@color/colorWrite"
            android:paddingEnd="16dp"
            tools:ignore="MissingConstraints">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:textColor="@color/textMain"
                android:text="@string/pc_header"
                />

            <ImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="45dp"
                android:layout_marginRight="10dp"
                app:layout_constraintRight_toLeftOf="@id/iv_right_go"
                android:src="@drawable/gouwu_nav_bg9_default"
                android:layout_height="45dp"/>

            <ImageView
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_right_go"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            app:layout_constraintTop_toBottomOf="@id/layout_header"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:background="@color/colorLine"
            android:layout_height="0.5dp"
            android:id="@+id/view_header"
            tools:ignore="MissingConstraints" />

        <TextView
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/pc_nickname"
            android:textSize="16sp"
            android:id="@+id/tv_nickname"
            android:textColor="@color/textMain"
            android:drawableRight="@drawable/ic_right"
            android:gravity="center_vertical"
            android:background="@color/colorWrite"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/view_header"
            android:layout_height="55dp"
            />
        <View
            android:layout_width="match_parent"
            android:background="@color/colorLine"
            android:id="@+id/line_nickname"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nickname"
            android:layout_height="0.5dp"/>

        <TextView
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/pc_age"
            android:textSize="16sp"
            android:id="@+id/tv_age"
            android:textColor="@color/textMain"
            android:drawableRight="@drawable/ic_right"
            android:gravity="center_vertical"
            android:background="@color/colorWrite"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/line_nickname"
            android:layout_height="55dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/pc_address"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:id="@+id/tv_address"
        android:textColor="@color/textMain"
        android:drawableRight="@drawable/ic_right"
        android:gravity="center_vertical"
        android:background="@color/colorWrite"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/layout_basic"
        android:layout_height="55dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>